OO-8591: checks all rights in organisations list, center action renderer